--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ code {
   .carousel{
       width: 100%;
       height: auto;
-      padding: 0 25px;
+      padding-bottom: 25px;
   }
 
   @media screen and (max-width: 900px) {
@@ -119,11 +119,11 @@ code {
 
   
   .carousel-image{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 80%;
-  height: auto;
+    display: contents;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    height: auto;
   }
   
   
